SQuirreL SQL Client Change Log
==============================


${squirrelsql.changelog.header}

Not yet released, available in our Subversion repository and in future snapshots and releases.
===============================================================================================

Enhancements:

Removed misleading button "Remember widths" from Overview Tab

Instead of displaying the file paths in Session tabs a small button is displayed when an open file exists.
  Clicking the button will open a popup menu that gives access to several information and functions concerning the file.

3488629: SQL formatting can be configured. See menu File--> Global Preferences --> Tab SQL formatting

Installer: The DB Copy, DB Diff and Refactoring Plugin have been made standard Plugins.

Graph Plugin: Tables can be selected by rectangle selection like icons on a desktop of modern operating systems.

SQL Execution: The execution panel that is displayed while an SQL statement is being processed is now closeable.
   Before the panel is closed the cancel action gets executed.

Created new Multisource Plugin:
  - Allows SQuirreL to support native multiple source queries where one SQL query spans multiple sources.
  - The plugin supports standard SQL including joins, group by, aggregation, LIMIT, and ordering where tables may come from one or more sources.
  - The plugin will perform function translation where a user requests a function that is not supported on a certain source. 
  - Added a new UnityJDBC default driver definition that supports this virtualization.
  
Graph Plugin: When a child table was removed from a Graph and the the parent tables columns were reordered constraint lines reappeared pointing nowhere.

Syntax Plugin: Upgraded to RSyntax text area version 1.5.2

Add new default driver definitions for HXTT Cobol and XML drivers.

About Dialog:
  Added a tab for displaying the status off all threads.
