@@ -1,7 +1,5 @@
 package net.sourceforge.squirrel_sql.plugins.hibernate.server;
 
-import java.io.PrintWriter;
-import java.io.StringWriter;
 import java.rmi.RemoteException;
 import java.sql.Connection;
 import java.sql.DatabaseMetaData;
@@ -166,7 +164,7 @@ public class HibernateServerConnectionImpl implements HibernateServerConnection
             }
             catch(RuntimeException e)
             {
-               if(getDeepestThrowable(e) instanceof NoSuchMethodException)
+               if(HibernateServerExceptionUtil.getDeepestThrowable(e) instanceof NoSuchMethodException)
                {
                   infos[i] = new HibernatePropertyInfo(propertyNames[i], mayBeCollectionTypeName, propTableName, propertyColumnNames);
                }
@@ -348,30 +346,7 @@ public class HibernateServerConnectionImpl implements HibernateServerConnection
          return t;
       }
 
-      StringWriter sw = new StringWriter();
-      PrintWriter pw = new PrintWriter(sw);
-
-      Throwable deepestThrowable = getDeepestThrowable(t);
-      deepestThrowable.printStackTrace(pw);
-      
-      pw.flush();
-      sw.flush();
-
-      String messageIncludingOriginalStackTrace = "Exception occured on Hibernate Server Process: " + deepestThrowable.getMessage() + "\n";
-
-      String stackTraceString = sw.toString();
-      String deepestToString = deepestThrowable.toString();
-      if(("" + deepestThrowable.getMessage()).equals(deepestToString) || stackTraceString.startsWith(deepestToString))
-      {
-         messageIncludingOriginalStackTrace += stackTraceString;
-      }
-      else
-      {
-         messageIncludingOriginalStackTrace +=  ( deepestToString + "\n" + stackTraceString);
-      }
-      
-
-      return new SquirrelHibernateServerException(messageIncludingOriginalStackTrace, deepestThrowable.getMessage(), deepestToString, deepestThrowable.getClass().getName());
+      return HibernateServerExceptionUtil.prepareTransport(t);
    }
 
 
@@ -411,17 +386,4 @@ public class HibernateServerConnectionImpl implements HibernateServerConnection
    }
 
 
-   private Throwable getDeepestThrowable(Throwable t)
-   {
-      Throwable parent = t;
-      Throwable child = t.getCause();
-      while(null != child)
-      {
-         parent = child;
-         child = parent.getCause();
-      }
-
-      return parent;
-
-   }
 }
